* Right alignment of group memberlist #658
* Commenting pic followed by text gives warnings #664
* Annoying procedure on pressing just [Enter] without any input #651 
* Group description dragging out of bounds #660
* Selecting a CLOSED group like MYSITE/group/123/ gives warning #663
* Current chat emoticons have no transparency #649
* Old style icons on search result type #643

OSSN - OPEN SOURCE SOCIAL NETWORK 4.0 RC

CHANGES:

* Questionable behavior on too small profile cover #638
* Oinitial crashing if OssnComments module is disabled #645
* Notifications crashing if OssnMessages module is disabled #646
* Make post text and tagged friends inline.
* Datepicker display glitch on administrator/edituser #637
* Member name overlapping user icon on viewport < 1200px (on search result list) #642
* Group(-owner) name overlapping group icon on viewport < 1200px #644
* Comment field overlapping user icon on viewport < 1200px #640
* Latest chat message almost completely hidden #648
* getFriendsPosts missing access index.
* Show only a user posts on homepage.

OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b3

BUGFIXES:

* Fix entity likes view.

OSSN - OPEN SOURCE SOCIAL NETWORK 4.0b1

BUGFIXES:

* Getting entity is failed #DEV-33
* Fix creating default object from empty value for user object
* Theme(Oinitial) still marked to require 3.0 in xml #DEV-36
* Fix language stings when for unblocking user.
* Hide notification box when we open topbar dropwn menu #617
* Hide groups cover buttons on mobile.
* Reposition/Change Cover buttons on top of notification #622
* Admin profiles should be unblockable by 'normal' members #625
* Delete groups.php.rej
* Need to clear file path after uploading the file #626
* Pagination offset should be better protected #627
* Loosing typed in data when clicking Terms and Conditions link #620
* Overlapping issue with longer names on profile page #630
* Unused pagebar skeleton when ads are disabled #628